# kalshi_bot

./: .env.example  .gitignore  pyproject.toml  requirements.txt  run.py  test_connection.py
.streamlit/: config.toml
src/: __init__.py  config.py  cross_scanner.py  executor.py  models.py  options_arb_scanner.py  scanner.py
src/analysis/: __init__.py  arbitrage.py  cross_market.py  options_hedge_arb.py
src/api/: __init__.py  auth.py  client.py  ib_client.py
src/dashboard/: app.py  async_bridge.py  data_service.py  utils.py
src/dashboard/components/: market_table.py  new_markets.py  orderbook_detail.py  price_movers.py  sidebar.py
src/data/: __init__.py  aggregator.py  database.py  orderbook.py
