[project]
name = "kalshi-dashboard"
version = "0.2.0"
description = "Monitor-only dashboard for Kalshi prediction markets"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",           # Async HTTP client for API calls
    "pandas>=2.0.0",           # Data manipulation and analysis
    "numpy>=1.24.0",           # Numerical computing
    "pydantic>=2.0.0",         # Data validation and models
    "pydantic-settings>=2.0.0", # Settings management
    "python-dotenv>=1.0.0",    # Environment variable loading
    "websockets>=12.0",        # WebSocket support for real-time data
    "loguru>=0.7.0",           # Better logging
    "sqlalchemy>=2.0.0",       # Database ORM for data persistence
    "aiosqlite>=0.19.0",       # Async SQLite support
    "cryptography>=41.0.0",    # RSA signing for API authentication
    "streamlit>=1.32.0",       # Dashboard UI
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
